--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,16 +1,19 @@
+# H2 CONNECTION
 spring:
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
     password:
 
-# h2 connection
+  # h2 client
   h2:
     console:
       enabled: true
       path: /h2-console
+
+  # show SQL
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
